src/style.css
body{
    font-family: Arial, Helvetica, sans-serif;
}

h1{
    margin-bottom: 0;
    color:rgb(37, 37, 127);
}

ul{
    list-style: none;
    padding-inline-start: 1px;
    color: rgb(111, 111, 186);
}

li{
    margin: 0;
    padding: 2px;
    font-size: 18px;
    line-height: 18px;
    font-weight: 100;
}

#date-specifics{
    display: flex;
    justify-content: flex-end;
}

.units {
    color:rgb(37, 37, 127);
}

#temperature {
    font-size: 60px;
    font-weight: 400;
    color:rgb(37, 37, 127);
}

.row{
    margin-top: 20px;
}

#me {
    color:rgb(37, 37, 127);
}

li:first-letter{
    text-transform: capitalize;
}

.weather-temperature .active:hover {
    text-decoration: none;
  }

.weather-temperature strong {
    line-height: -1;
}

.weather-temperature img {
    margin-right: 5px;
    margin-top: 5px;
    height: 80px;
    width: 80px;
  }

  .weather-temperature .units {
    position: relative;
    font-size: 18px;
    top: -32px;
  }

  .specifics{
      margin-top: 20px;
  }

  .weather-temperature .active {
color: black;
cursor: default;
  }

  .weather-temperature .active:hover {
    text-decoration: none;
      }

.weather-forecast {
    margin-top: 20px;
    text-align: center;
}

.weather-forecast-date {
    font: 16px;
    color:rgb(37, 37, 127);
}
.weather-forecast-temperatures{
    font-size: 14px;
}

.weather-forecast-temperatures-max{
    color:rgb(37, 37, 127);
}

.weather-forecast-temperatures-min{
    color: rgb(111, 111, 186);
}

